--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ streamlit
 requests
 beautifulsoup4
 gtts
+transformers
 numpy
 pandas
 scikit-learn
 googletrans==4.0.0-rc1
 matplotlib
 nltk
+torch
 gnews
